# strident-quail

./: .gitignore  README.md  cabal.config  graphiql.html  stack.yaml  strident-quail.cabal
app/: Main.hs
src/: QueryExchange.hs  Schema.hs
