name:                strident-quail
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/strident-quail#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Schema
  build-depends:       base >= 4.7 && < 5
                     , graphql-api >= 0.2.0
                     , protolude >= 0.2
                     , text
                     , mtl
                     , aeson
                     , bytestring
                     , containers
  default-language:    Haskell2010

executable strident-quail-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , strident-quail
                     , scotty
                     , warp
                     , http-media
                     , http-types
                     , text
                     , bytestring
  default-language:    Haskell2010

test-suite strident-quail-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , strident-quail
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/strident-quail
